# info_retrieval

./: .gitignore  Cargo.toml  query.json  release  run  test.json
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/main/: file_processor.rs
lib/src/main/collections/: biword_index.rs  coors_index.rs  kgram_index.rs  lib.rs  multiple_file_collection.rs  parallel_utils.rs  permuterm_index.rs  prefix_index.rs  prefix_trie.rs  set.rs  single_file_collection.rs  single_file_index.rs  string_utils.rs  traits.rs
lib/src/main/collections/ondisk_index/: concurrent_ondisk_index.rs  lib.rs  ondisk_index.rs  ondisk_index_reader.rs  ondisk_index_reducer.rs  vec_utils.rs
lib/src/main/collections/process_strategies/: kgram.rs  lib.rs  permuterm.rs
lib/src/main/query/: operators.rs  query.rs
src/: main.rs
