[package]
name = "information_retrieval"
version = "0.1.0"
authors = ["bogdan <voylovbogdan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
varuint = "0.6"

