[package]
name = "lib"
version = "0.1.0"
authors = ["bogdan <voylovbogdan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
filebuffer = "0.4"
unicode-segmentation = "1.7.1"
rand = "0.5.0"
encoding = "0.2.33"
varuint = "0.6"